project2/test/test_11711111_6.spl
int t;

int main() {
    t = get_div(1, 0);
}

int get_div(float a, float b) {
    return a/b;
}
